UHF-7896: UHF-7896: add tiny custom modifications to override/fix GIN styles.

--- a/src/scss/06_components/layout/_page.scss
+++ b/src/scss/06_components/layout/_page.scss
@@ -6,12 +6,17 @@
       display: none;
     }
   }
+
+  .ui-dialog .ui-widget-content.ui-dialog-content {
+    padding-top: $spacing;
+  }
 }
 
 .hdbt_admin--edit-form {
   // Adjust the from title font-size.
   .field--name-title .form-element {
     font-size: remify(18px);
+    font-weight: 400;
   }
 
   // Adjust the placement of lists in field descriptions.
@@ -36,3 +41,5 @@
     }
   }
 }
+
+
