--- a/src/scss/06_components/paragraphs/_common.scss
+++ b/src/scss/06_components/paragraphs/_common.scss
@@ -26,7 +26,7 @@
         }
 
         th {
-          background: transparent;
+          background: #fff;
           box-shadow: none;
           padding-bottom: 0;
           padding-left: 0;
