--- a/src/scss/06_components/paragraphs/_common.scss
+++ b/src/scss/06_components/paragraphs/_common.scss
@@ -26,7 +26,7 @@
         }
 
         th {
-          background: #fff;
+          background: $color-white;
           box-shadow: none;
           padding-bottom: 0;
           padding-left: 0;
@@ -34,7 +34,7 @@
       }
 
       .draggable {
-        background-color: #fff;
+        background-color: $color-white;
         margin-top: 0.5rem;
 
         // Hide the paragraph bullet when you are not able to organize paragraphs.
