UHF-8411: UHF-8411: Make paragraph select elements width bigger.

--- a/src/scss/06_components/layout/_page.scss
+++ b/src/scss/06_components/layout/_page.scss
@@ -40,6 +40,19 @@
       display: none;
     }
   }
+
+  @media (min-width: $breakpoint-s) {
+    ul.paragraph-selection.dropbutton, ul.paragraph-selection.dropbutton {
+      width: 500px;
+    }
+  }
 }
 
-
+.js .hdbt_admin--edit-form,
+.js.no-touchevents .hdbt_admin--edit-form {
+  @media (min-width: $breakpoint-s) {
+    ul.paragraph-selection.dropbutton {
+      width: 500px;
+    }
+  }
+}
