UHF-8411: Added white-space normal so that if the text is too long it goes to two lines

--- a/src/scss/06_components/layout/_page.scss
+++ b/src/scss/06_components/layout/_page.scss
@@ -41,18 +41,27 @@
     }
   }
 
-  @media (min-width: $breakpoint-s) {
-    ul.paragraph-selection.dropbutton, ul.paragraph-selection.dropbutton {
+  ul.paragraph-selection.dropbutton,
+  ul.paragraph-selection.dropbutton {
+    @media (min-width: $breakpoint-s) {
       width: 500px;
+    }
+
+    .field-add-more-submit {
+      white-space: normal;
     }
   }
 }
 
 .js .hdbt_admin--edit-form,
 .js.no-touchevents .hdbt_admin--edit-form {
-  @media (min-width: $breakpoint-s) {
-    ul.paragraph-selection.dropbutton {
+  ul.paragraph-selection.dropbutton {
+    @media (min-width: $breakpoint-s) {
       width: 500px;
+    }
+
+    .field-add-more-submit {
+      white-space: normal;
     }
   }
 }
