--- a/src/scss/06_components/misc/_design-selection.scss
+++ b/src/scss/06_components/misc/_design-selection.scss
@@ -8,6 +8,10 @@
     padding: 12px 16px;
   }
 
+  .select2-selection .select2-selection__placeholder {
+    line-height: 1;
+  }
+
   .select2-selection__placeholder,
   .select2-selection__arrow,
   .select2-selection__clear {
