UHF-8523: Fix issue with some of the buttons having gray bg, make the toolbar more compact, fix issue with table headers

--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -1,6 +1,7 @@
 @import 'layout/_index';
 @import 'block/_index';
 @import 'navigation/_index';
+@import 'forms/_index';
 @import 'entity/_index';
 @import 'paragraphs/_index';
 @import 'views/_index';
