UHF-8508: Unified naming convention of select list components.

--- a/src/scss/06_components/misc/__index.scss
+++ b/src/scss/06_components/misc/__index.scss
@@ -1,5 +1,5 @@
 @import 'select-color-palette';
 @import 'select-design';
+@import 'select-paragraph';
 @import 'diff';
 @import 'image-previewer';
-@import 'paragraph-selection';
