UHF-9113: Hide duplicated Text label from paragraphs.

--- a/src/scss/06_components/paragraphs/_text.scss
+++ b/src/scss/06_components/paragraphs/_text.scss
@@ -3,6 +3,11 @@
 // Styles for Text paragraph.
 //
 
+// Hide the duplicated "Text" label from Text paragraph.
+.paragraphs-tabs-wrapper .paragraph-type--text .form-type--textarea > label.form-item__label {
+  display: none;
+}
+
 // Diff styles
 .paragraph--type--text {
   margin-top: $spacing-quadruple;
