--- a/src/scss/06_components/_select2.scss
+++ b/src/scss/06_components/_select2.scss
@@ -54,6 +54,7 @@
     }
 
     // Like button--small.
+    .select2-selection__rendered,
     .select2-selection__choice {
       align-items: center;
       background: var(--colorGinPrimary);
