--- a/src/scss/06_components/paragraphs/_hero.scss
+++ b/src/scss/06_components/paragraphs/_hero.scss
@@ -1,7 +1,16 @@
-//
 // @file
 // Styles for Hero paragraph.
-//
+
+// Diff styles Revosopm
+.paragraph--type--hero {
+  .field--name-field-hero-title {
+    font-size: remify(32px);
+  }
+
+  .field--name-field-hero-design {
+    margin-top: $spacing-half;
+  }
+}
 
 // Hero-block style overrides
 .node-form .field--name-field-hero {
@@ -10,7 +19,7 @@
   }
 
   .paragraph-type--hero .form-wrapper .paragraphs-subform {
-    @media (min-width: 1340px) {
+    @media (width >= 1340px) {
       column-gap: 40px;
       display: grid;
       grid-template-columns: auto auto;
@@ -19,7 +28,7 @@
     }
 
     .field--name-field-hero-design {
-      @media (min-width: 1340px) {
+      @media (width >= 1340px) {
         grid-column-end: 2;
         grid-column-start: 1;
         grid-row-end: 2;
@@ -28,7 +37,7 @@
     }
 
     .field--name-field-hero-bg-color {
-      @media (min-width: 1340px) {
+      @media (width >= 1340px) {
         grid-column-end: 2;
         grid-column-start: 1;
         grid-row-end: 3;
@@ -37,7 +46,7 @@
     }
 
     .field--name-field-hero-title {
-      @media (min-width: 1340px) {
+      @media (width >= 1340px) {
         grid-column-end: 2;
         grid-column-start: 1;
         grid-row-end: 4;
@@ -46,7 +55,7 @@
     }
 
     .field--name-field-hero-desc {
-      @media (min-width: 1340px) {
+      @media (width >= 1340px) {
         grid-column-end: 2;
         grid-column-start: 1;
         grid-row-end: 5;
@@ -55,7 +64,9 @@
     }
 
     .field--name-field-hero-image {
-      @media (min-width: 1340px) {
+      margin-top: $spacing;
+
+      @media (width >= 1340px) {
         box-sizing: border-box;
         grid-column-end: 3;
         grid-column-start: 2;
@@ -82,7 +93,7 @@
 
       .media-library-widget-modal .media-library-item--grid,
       .media-library-selection .media-library-item--grid {
-        @media (min-width: 1340px) {
+        @media (width >= 1340px) {
           width: 250px;
         }
       }
@@ -93,6 +104,7 @@
       grid-column-start: 1;
       grid-row-end: 7;
       grid-row-start: 6;
+      margin-top: $spacing;
 
       .paragraphs-subform {
         display: block;
@@ -110,12 +122,12 @@
         box-shadow: none;
         padding: 0;
 
-        @media (min-width: 1340px) {
+        @media (width >= 1340px) {
           margin: 0 0 0 -0.5rem;
         }
 
         tbody {
-          @media (min-width: 1340px) {
+          @media (width >= 1340px) {
             display: flex;
             flex-wrap: wrap;
           }
@@ -124,7 +136,7 @@
         tr {
           max-width: 520px;
 
-          @media (min-width: 1340px) {
+          @media (width >= 1340px) {
             flex: 1 1 32%;
             margin: 0 0.5rem 1rem;
           }
@@ -135,16 +147,5 @@
         display: block;
       }
     }
-  }
-}
-
-// Diff styles
-.paragraph--type--hero {
-  .field--name-field-hero-title {
-    font-size: remify(32px);
-  }
-
-  .field--name-field-hero-design {
-    margin-top: $spacing-half;
   }
 }
