UHF-9690: Fixed margins for the character counter. Hide filter format guidelines from character counter fields.

--- a/src/scss/06_components/forms/_character-counter.scss
+++ b/src/scss/06_components/forms/_character-counter.scss
@@ -1,5 +1,6 @@
 .character-counter {
-  margin-top: -$spacing-quarter;
+  line-height: calc(17rem / 16);
+  margin-block: calc(6rem / 16);
 }
 
 .character-counter__count {
@@ -23,4 +24,8 @@
 .character-counter__warning-text {
   color: $color-black;
   margin-inline-start: $spacing-half;
+}
+
+.form-item__description + .character-counter {
+  margin-top: -$spacing-quarter;
 }
