--- a/templates/form/form-element--character-count.html.twig
+++ b/templates/form/form-element--character-count.html.twig
@@ -94,6 +94,7 @@ js-form-type-[something] exists on form items. We have to keep them.
         <div class="character-counter__warning-text" data-warning-id="form-item--{{ name|clean_class }}"></div>
       </div>
       {{ attach_library('hdbt_admin/character-counter')}}
+      {{ attach_library('hdbt/hdbt-icons')}}
     </div>
   {% endif %}
 </div>
