Added styles to media-library-items in views.

--- a/src/scss/06_components/entity/_media.scss
+++ b/src/scss/06_components/entity/_media.scss
@@ -10,3 +10,9 @@
     font-weight: 400;
   }
 }
+
+// Do not show the media edit link if the media is shown in media library view.
+// Media library has a separate element to show the edit link.
+.views-row.media-library-item .media-library-item__preview-wrapper .media-library-item__edit {
+  display: none;
+}
