--- a/src/scss/06_components/_select2.scss
+++ b/src/scss/06_components/_select2.scss
@@ -1,8 +1,3 @@
-//
-// @file
-// Styles for Select2.
-//
-
 // Select2 to look and feel more Gin-like.
 .select2.select2-container {
   min-height: 50px;
@@ -85,7 +80,28 @@
       }
     }
   }
+
+  .select2-selection.select2-selection--single .select2-selection__rendered {
+     padding-left: calc(1rem - 1px);
+   }
+
+  .select2-selection.select2-selection--single .select2-selection__rendered .select2-selection__placeholder {
+    margin: -$spacing-half;
+    padding: calc(1rem - 1px);
+  }
+
+  .required + & {
+    .select2-selection.select2-selection--single .select2-selection__rendered {
+      padding: calc(1rem - 1px) calc(1rem - 1px) calc(1rem - 1px) calc(2rem - 1px) ;
+    }
+
+    .select2-selection.select2-selection--single .select2-selection__rendered .select2-selection__placeholder {
+      margin: -15px;
+    }
+  }
 }
+
+
 
 // Select2 results.
 .select2-container .select2-results__options {
