--- a/src/scss/06_components/layout/_header.scss
+++ b/src/scss/06_components/layout/_header.scss
@@ -8,14 +8,17 @@
   .hdbt_admin--edit-form {
     .form-item--status,
     .field--name-status {
-      align-items: center;
-      display: flex;
-      margin-right: $spacing-and-half;
+      margin-right: $spacing !important; // Overrides gin more actions style.
+    }
+
+    .form-item--status .form-item__label,
+    .field--name-status .form-item__label {
+      font-size: remify(15px);
     }
   }
 
   // Add divider for sidebar when viewing it in tablet width.
-  @media (max-width: 1023px) {
+  @media (width <= 1023px) {
     .hdbt_admin--edit-form .layout-region-node-secondary {
       border-top: 2px solid $color-black-30;
       margin-top: $spacing-double;
@@ -32,17 +35,15 @@
       gap: $spacing-double;
       justify-items: center;
 
-      @media (min-width: 1024px) and (max-width: 1280px) {
+      @media (width >= 1024px) and (width <= 1280px) {
         .button {
-          font-size: remify(14px);
           padding: $spacing-half $spacing * 0.75;
         }
 
-        .form-item--status,
-        .field--name-status {
-          label {
-            font-size: remify(14px);
-          }
+        .button,
+        .form-item--status label,
+        .field--name-status label {
+          font-size: remify(14px);
         }
       }
     }
