UHF-9509: Hide the content_liftup paragraph from the node edit and add forms so that more of these won't be added while not breaking the existing content

--- a/src/scss/06_components/paragraphs/_common.scss
+++ b/src/scss/06_components/paragraphs/_common.scss
@@ -166,3 +166,10 @@
     }
   }
 }
+
+// Hide content_liftup from the paragraph list so that no more of these paragraphs are added.
+// The paragraph will later be moved after all instances where it is used have been changed to
+// use the unit_contact_card. This can be removed in the ticket UHF-9511.
+.add-more-button-content-liftup {
+  display: none;
+}
