--- a/src/scss/06_components/paragraphs/_common.scss
+++ b/src/scss/06_components/paragraphs/_common.scss
@@ -1,10 +1,7 @@
-  /* stylelint-disable no-descending-specificity */
-
 // @file
 // Styles for all paragraphs.
 
 /* stylelint-disable max-nesting-depth */
-
 .hdbt-admin {
   // Remove white background and paddings from first level of paragraph elements.
   .paragraphs-tabs-wrapper {
@@ -92,14 +89,9 @@
         padding: 0;
       }
 
-      .tabledrag-handle {
-        display: block;
-        margin-left: -12px;
-
-        &::after {
-          margin: 0;
-          padding: 0;
-        }
+      .tabledrag-handle::after {
+        margin: 0;
+        padding: 0;
       }
     }
 
@@ -113,7 +105,6 @@
   // Similar issue and a base for this workaround:
   // https://www.drupal.org/project/gin/issues/3348101#comment-15274211
   // TODO: Remove this fix when the base issue has been addressed.
-  /* stylelint-disable-next-line no-duplicate-selectors */
   .paragraphs-tabs-wrapper {
     figure > table.field-multiple-table {
       display: block;
@@ -162,78 +153,69 @@
             width: 100%;
 
             .paragraphs-actions {
-              margin-left: auto;
-              margin-right: 0;
+              margin-inline: auto 0;
             }
           }
 
           .tabledrag-hide {
-            margin: auto;
+            align-items: center;
+            display: inline-flex;
+            margin: 0 auto;
           }
         }
       }
-    }
-  }
 
-  // Prevent the overflow of Paragraphs in node edit form.
-  // https://www.drupal.org/project/gin/issues/3348101#comment-15274211
-  // TODO: Remove this fix when the base issue has been addressed.
-
-  /* stylelint-disable-next-line no-duplicate-selectors */
-  .paragraphs-tabs-wrapper {
-    .field-multiple-table {
-      display: block;
-
-      > tbody {
-        display: block;
-
-        > .draggable {
-          > td + td {
-            display: block;
-            width: 100%;
-          }
-
-          > thead {
-            display: block;
-
-            > tr {
-              display: flex;
-
-              th:first-child {
-                &.field-label {
-                  display: flex;
-                  padding-inline-end: 0;
-                  width: 100%;
-                }
-
-                .paragraphs-actions {
-                  margin-inline: auto 0;
-                }
-              }
-
-              .tabledrag-hide {
-                align-items: center;
-                display: inline-flex;
-                margin: 0 auto;
-              }
-            }
-          }
-        }
-      }
-    }
-
-    .draggable {
-      align-items: center;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      padding-left: 1rem;
-      position: relative;
-
-      > td {
-        display: block;
+      .draggable {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
         position: relative;
+
+        > td {
+          display: block;
+          flex: 0 0 auto;
+          position: relative;
+
+          &:nth-child(2) {
+            flex: 1 0 0;
+            min-width: 0;
+          }
+        }
+      }
+
+      .draggable-table {
+        .form-item {
+          margin-block-end: 0;
+        }
+
+        .tabledrag-handle::after {
+          margin-block-start: 0;
+        }
       }
     }
   }
+
+  .js {
+    .field--widget-paragraphs,
+    .field--widget-paragraphs-previewer {
+      .field-multiple-table {
+        display: block;
+      }
+    }
+  }
+
+  td .claro-details {
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+
+  .paragraphs-subform .field-multiple-table.draggable-table {
+    .form-item, 
+    .tabledrag-handle::after {
+      margin-block-end: 0;
+    }
+  }
+
 }
