UHF-10293: Added styles for the image gallery paragraphs.

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -5,6 +5,7 @@
 @import 'content-cards';
 @import 'hero';
 @import 'image';
+@import 'image-gallery';
 @import 'library';
 @import 'liftup-with-image';
 @import 'list-of-links';
