UHF-10910: Added comments.

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -1,3 +1,4 @@
+// Hide the unnecessary "Content" label from accordion thead.
 .paragraph-type--accordion {
   .field-accordion-items-values > thead {
     display: none;
@@ -5,6 +6,7 @@
 }
 
 .paragraph-type--accordion-item {
+  // Hide the unnecessary "Content" label from accordion item thead.
   .field-accordion-item-content-values > thead {
     display: none;
   }
