--- a/src/scss/06_components/paragraphs/_image-gallery.scss
+++ b/src/scss/06_components/paragraphs/_image-gallery.scss
@@ -1,64 +1,61 @@
-.paragraph-type--image-gallery-item {
-  .paragraphs-subform {
-    @media (min-width: 1180px) {
-      box-sizing: border-box;
-      column-gap: 40px;
-      display: grid;
-      grid-template-columns: 50% auto;
-      grid-template-rows: auto auto;
+.hdbt-admin .paragraph-type--image-gallery-item .paragraphs-subform {
+  @media (width >= 1180px) {
+    box-sizing: border-box;
+    column-gap: 40px;
+    display: grid;
+    grid-template-columns: 30% auto;
+    grid-template-rows: auto auto;
+  }
+
+  .field--name-field-gallery-image {
+    @media (width >= 1180px) {
+      grid-column-end: 2;
+      grid-column-start: 1;
+      grid-row-end: 3;
+      grid-row-start: 1;
+      justify-self: self-start;
+      max-width: 200px;
     }
 
-    .field--name-field-gallery-image {
-      @media (min-width: 1180px) {
-        grid-column-end: 2;
-        grid-column-start: 1;
-        grid-row-end: 3;
-        grid-row-start: 1;
-        justify-self: self-start;
-        max-width: 200px;
+    fieldset {
+      @media (width >= 1180px) {
+        background: transparent;
+        border: 0;
+        box-shadow: none;
+        margin: 0 !important;
+        padding: 0 !important;
       }
 
-      fieldset {
-        @media (min-width: 1180px) {
-          background: transparent;
-          border: 0;
-          box-shadow: none;
+      legend {
+        @media (width >= 1180px) {
+          display: none;
+        }
+      }
+
+      .fieldset__wrapper {
+        @media (width >= 1180px) {
           margin: 0;
-          padding: 0 0 1.5rem;
-        }
-
-        legend {
-          @media (min-width: 1180px) {
-            display: none;
-          }
-        }
-
-        .fieldset__wrapper {
-          @media (min-width: 1180px) {
-            margin: 0;
-          }
-        }
-
-        .media-library-selection {
-          @media (min-width: 1180px) {
-            margin-top: 0;
-          }
         }
       }
 
-      .media-library-widget-modal .media-library-item--grid,
-      .media-library-selection .media-library-item--grid {
-        @media (min-width: 1180px) {
-          width: 100%;
+      .media-library-selection {
+        @media (width >= 1180px) {
+          margin-top: 0;
         }
       }
     }
 
-
-    .field--name-field-gallery-image-description {
-      .form-element--type-text {
+    .media-library-widget-modal .media-library-item--grid,
+    .media-library-selection .media-library-item--grid {
+      @media (width >= 1180px) {
         width: 100%;
       }
+    }
+  }
+
+  .field--name-field-gallery-image-description {
+    .form-element--type-text {
+      width: 100%;
     }
   }
 }
