--- a/src/scss/06_components/paragraphs/_hero.scss
+++ b/src/scss/06_components/paragraphs/_hero.scss
@@ -1,8 +1,5 @@
-// @file
-// Styles for Hero paragraph.
-
-// Diff styles Revosopm
 .paragraph--type--hero {
+  // Diff styles
   .field--name-field-hero-title {
     font-size: remify(32px);
   }
@@ -14,8 +11,9 @@
 
 // Hero-block style overrides
 .node-form .field--name-field-hero {
-  thead .field-label {
-    display: none !important;
+  // Hide the unnecessary "Content" label from hero thead.
+  .field-hero-values > thead {
+    display: none;
   }
 
   .paragraph-type--hero .form-wrapper .paragraphs-subform {
@@ -125,21 +123,21 @@
         @media (width >= 1340px) {
           margin: 0 0 0 -0.5rem;
         }
+      }
 
-        tbody {
-          @media (width >= 1340px) {
-            display: flex;
-            flex-wrap: wrap;
-          }
+      .layer-wrapper tbody {
+        @media (width >= 1340px) {
+          display: flex;
+          flex-wrap: wrap;
         }
+      }
 
-        tr {
-          max-width: 520px;
+      .layer-wrapper tr {
+        max-width: 520px;
 
-          @media (width >= 1340px) {
-            flex: 1 1 32%;
-            margin: 0 0.5rem 1rem;
-          }
+        @media (width >= 1340px) {
+          flex: 1 1 32%;
+          margin: 0 0.5rem 1rem;
         }
       }
 
