UHF-10910: Hide the unnecessary duplicated label from paragraphs library item.

--- a/src/scss/06_components/paragraphs/_library.scss
+++ b/src/scss/06_components/paragraphs/_library.scss
@@ -1,3 +1,7 @@
+.field--name-field-reusable-paragraph .form-item__label {
+  display: none;
+}
+
 .paragraphs-library-item-form-instructions {
   align-items: center;
   display: flex;
